--- a/.travis.yml
+++ b/.travis.yml
@@ -29,11 +29,10 @@ after_script:
   - git config user.email "${GIT_EMAIL}"
   - git clone https://${SITE_REPO} site-repo && cd site-repo
   - mkdir -p ${BRANCH} && rm -rf ${BRANCH}/*
-  - cp -r ../docs/.vuepress/dist ./${BRANCH}/
+  - cp -r ../.vuepress/dist ./${BRANCH}/
   - git add .
   - git commit -am "Auto Build"
-  - git push --force --quiet "https://${SITE_PUSH_TOKEN}@${SITE_REPO}" master
-# E: Build LifeCycle
+  - git push --force --quiet "https://${SITE_PUSH_TOKEN}@${SITE_REPO}" master:master
 
 #指定分支，只有指定的分支提交时才会运行脚本
 branches:
