--- a/.travis.yml
+++ b/.travis.yml
@@ -19,15 +19,17 @@ before_script:
   - echo $BRANCH
   - sed -i 's/base:.*,/base:\"\/'$BRANCH'\/\",/g' .vuepress/config.js 
   - sed -i 's/docsBranch:.*,/docsBranch:\"'$BRANCH'\",/g' .vuepress/config.js 
+  - rm -rf site-repo
+  - git config user.name "${GIT_NAME}"
+  - git config user.email "${GIT_EMAIL}"
+  - git clone https://${SITE_REPO} site-repo
+  - cp versions.js 
   
 script:
   - npm run build
 
 after_script:
-  - rm -rf site-repo
-  - git config user.name "${GIT_NAME}"
-  - git config user.email "${GIT_EMAIL}"
-  - git clone https://${SITE_REPO} site-repo && cd site-repo
+  - cd site-repo
   - mkdir -p ${BRANCH} && rm -rf ${BRANCH}/*
   - cp -r ../.vuepress/dist/* ./${BRANCH}/
   - git checkout ${SITE_BRANCH}
