--- a/docs/package.json
+++ b/docs/package.json
@@ -29,5 +29,8 @@
     "markdownlint-cli": "^0.22.0",
     "vue-toasted": "^1.1.25",
     "vuepress": "^1.3.1"
+  },
+  "dependencies": {
+    "axios": "^0.19.2"
   }
 }
