--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ install:
   - cd docs && npm install
 
 before_script:
+  - if [ "$TRAVIS_EVENT_TYPE" != "pull_request" ]; then exit 0; fi
   - export PR=https://api.github.com/repos/$TRAVIS_REPO_SLUG/pulls/$TRAVIS_PULL_REQUEST
   - export BRANCH=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo $TRAVIS_BRANCH; else echo `curl -s $PR | jq -r .head.ref`; fi)
   - echo $BRANCH
