--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ before_script:
   - export PR=https://api.github.com/repos/$TRAVIS_REPO_SLUG/pulls/$TRAVIS_PULL_REQUEST
   - export BRANCH=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo $TRAVIS_BRANCH; else echo `curl -s $PR | jq -r .head.ref`; fi)
   - echo $BRANCH
-  - sed -i 's#BUILDING_BRANCH.*""#BUILDING_BRANCH\ =\ "'$BRANCH'"#g' .vuepress/config.js
+  - sed -i 's#const\ BUILDING_BRANCH.*#const\ BUILDING_BRANCH\ =\ "'$BRANCH'"#g' .vuepress/config.js
   - find ./ -name "*.md" -exec sed -i -e 's/!\[\(.*\)\][(]\(.*\)[)]/<img \:src=\"$withBase\('\''\2'\''\)\" alt=\"\1\">/g' {} \;
   - rm -rf site-repo
   
